--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
      # db mysql ${DB_DATABASE} //Busca do arquivo .env
     mysql:
         container_name: banco-mysql
-        image: mysql:5.7.22
+        image: mysql:8.0.26
         restart: unless-stopped
         environment:
             MYSQL_DATABASE: ${DB_DATABASE}
@@ -39,7 +39,7 @@ services:
             - "3388:3306"
         networks:
             - sistema-getao-network
-
+        platform: linux/amd64
     phpmyadmin:
         image: phpmyadmin/phpmyadmin
         container_name: phpmyadmin
