--- a/.env
+++ b/.env
@@ -2,16 +2,16 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:9VxyETmQKNXYz0xtz3fyVcdRSJGRsBLLDidjY/6BjRA=
 APP_DEBUG=true
-APP_URL=http://localhost:8989
+APP_PORT=8000
+APP_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-#Especificaçoes do docker-compose.yml
 DB_CONNECTION=mysql
-DB_HOST=mysql
-DB_PORT=3306
+DB_HOST=127.0.0.1
+DB_PORT=8889
 DB_DATABASE=sistema_gestao
 DB_USERNAME=root
 DB_PASSWORD=root
